# ACT

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
example/: README.md  __init__.py  custom_types.py  dataset.py  eval.py  model.py  train.py
example/config/: sim_insertion_scripted.yaml  test_sim_insertion_scripted.yaml
src/act/: __init__.py  core.py
src/act/networks/: __init__.py  backbone.py  position_encoding.py  transformer.py
